src/objects/SicProduct__c.object
<CustomObject>
    <description>A Product in the Product Catalog
Note: don&apos;t make any field required, only set it required on page layouts
This will ensure that the customization works</description>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>Product Category to assist users in browsing the catalog</inlineHelpText>
        <label>Category</label>
        <referenceTo>SicCategory__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Item currency.
Must be maintained as ISO code in the SRM server.</description>
        <inlineHelpText>Item currency.
Must be maintained as ISO code in the SRM server.</inlineHelpText>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the item</description>
        <inlineHelpText>Description of the item</inlineHelpText>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <description>Detailed description of the product in Rich Text with images</description>
        <inlineHelpText>Detailed description of the product in Rich Text with images</inlineHelpText>
        <label>Detail</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lead_Time_Display__c</fullName>
        <description>Lead Time in text format</description>
        <formula>&apos;in &apos; +  TEXT(Lead_Time__c) + &apos; days&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lead Time in text format</inlineHelpText>
        <label>Usually Ships</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <description>Delivery time of the item in days</description>
        <inlineHelpText>Delivery time of the item in days</inlineHelpText>
        <label>Lead Time</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <description>Long Description
Description of a configuration, for example.</description>
        <inlineHelpText>Long Description
Description of a configuration, for example.</inlineHelpText>
        <label>Long Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Product_Number__c</fullName>
        <description>Manufacturer Product Number
This information is sent via OCI</description>
        <inlineHelpText>Manufacturer Product Number</inlineHelpText>
        <label>Manufacturer Product Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PictureDocumentID__c</fullName>
        <description>ID of the Product Picture document object</description>
        <inlineHelpText>ID of the Product Picture document object</inlineHelpText>
        <label>Picture Document ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <description>image tag for the product picture to be used on internal page layouts. It will not work on externally exposed page layouts</description>
        <formula>IMAGE(&quot;/servlet/servlet.ImageServer?id=&quot; +  PictureDocumentID__c  + &quot;&amp;oid=&quot; + $Organization.Id, &quot;picture&quot;)</formula>
        <inlineHelpText>Product Picture</inlineHelpText>
        <label>Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Display__c</fullName>
        <description>Price displayed as &apos;10 CAD per 1 EA&apos;</description>
        <formula>TEXT(Price__c) +  &apos; &apos; + TEXT(Currency__c) + IF(Unit_Text__c &lt;&gt; &apos;Each&apos;, &apos; per &apos;, &apos;&apos;) +   IF(Price_Unit__c &gt; 1, TEXT(Price_Unit__c), &apos;&apos;)   + &apos; &apos; +  Unit_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>price displayed with currency and price unit</inlineHelpText>
        <label>Price Per Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Unit__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Price unit of the item</description>
        <inlineHelpText>Price unit of the item</inlineHelpText>
        <label>Price Unit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Price of an item per price unit</description>
        <inlineHelpText>Price of an item per price unit</inlineHelpText>
        <label>Price</label>
        <precision>14</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNSPSC__c</fullName>
        <description>UNSPSC category expressed with the Commodity Ttitle</description>
        <inlineHelpText>UNSPSC category expressed with the Commodity Ttitle</inlineHelpText>
        <label>UNSPSC</label>
        <referenceTo>UNSPSC__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNSPSC_code__c</fullName>
        <description>UNSPSC Commodity Code, use this in OCI</description>
        <formula>UNSPSC__r.Commodity_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>UNSPSC Commodity Code</inlineHelpText>
        <label>UNSPSC code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_ISO__c</fullName>
        <description>Unit ISO code</description>
        <formula>Unit__r.ISO__c</formula>
        <inlineHelpText>Unit ISO code, use this for OCI</inlineHelpText>
        <label>UnitISO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Text__c</fullName>
        <description>Unit described with Text</description>
        <formula>Unit__r.Text__c</formula>
        <inlineHelpText>Unit</inlineHelpText>
        <label>Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <description>measurement unit</description>
        <inlineHelpText>measurement unit</inlineHelpText>
        <label>Unit</label>
        <referenceTo>Unit__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>